--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -25,6 +25,7 @@ tile.icbm:TileMissile.0.name=Wooden Rocket Display
 tile.icbm:TileMissile.1.name=Wooden Small Missile Display
 
 tile.icbm:smallLauncher.name=Portable Missile Launcher
+tile.icbm:smallLauncher.container.name=Launcher Guidance Screen
 
 ## Explosives
 explosive.icbm:tnt.name=TNT
