--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -20,6 +20,8 @@ item.icbm:missile.medium.empty.name=Large Missile Casing
 item.icbm:missile.large.name=ICBM
 item.icbm:missile.large.empty.name=ICBM Casing
 
+item.icbm:siloLinker.name=Data Chip
+
 ## Tiles
 tile.icbm:TileMissile.0.name=Wooden Rocket Display
 tile.icbm:TileMissile.1.name=Wooden Small Missile Display
@@ -29,9 +31,17 @@ tile.icbm:smallLauncher.container.name=Launcher Guidance Screen
 tile.icbm:smallLauncher.container.invalidtarget=Invalid Target Location
 tile.icbm:smallLauncher.container.invaliddistance=Target distance needs to be between 20 and 200
 
+tile.icbm:missileController.name=Launcher Controller
+tile.icbm:smallsilo.name=Small Silo
+tile.icbm:missileworkstation.name=Missile Station
+
 ## Explosives
 explosive.icbm:tnt.name=TNT
 explosive.icbm:snowmen.name=Let it Snow!
+explosive.icbm:EndoThermic.name=Endothermic
+explosive.icbm:ExoThermic.name=Exothermic
+explosive.icbm:ArrowFragment.name=Arrow
+explosive.icbm:Antimatter.name=Antimatter
 
 ## Launcher
 item.icbm:rocketLauncher.name=Handheld Launcher
@@ -79,6 +89,8 @@ gui.icbm:controller.update.x=0
 gui.icbm:controller.back.name=Back
 gui.icbm:controller.back.width=50
 gui.icbm:controller.back.x=100
+
+container.TileController.name=Launcher Controller
 
 
 ## Triggers
