--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -49,8 +49,8 @@ info.icbm:rocketlauncher.tooltip=Fires small missiles
 
 ## Warhead
 tile.icbm:warhead.name=Warhead
-tile.icbm:warhead.0.name=Micro Warhead
-tile.icbm:warhead.1.name=Small Warhead
+tile.icbm:warhead.micro.name=Micro Warhead
+tile.icbm:warhead.small.name=Small Warhead
 
 ## Info
 info.icbm:engine.name=Engine
