--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -106,4 +106,5 @@ module.icbm:engine.creative.name=Void Thruster
 
 ## ItemTracker
 item.icbmclassic:tracker.name=Tracker
-item.icbmclassic:itemtracker.description.name=Left click to track players
+item.icbmclassic:itemtracker.description=Left click to track players
+item.icbmclassic:itemtracker.trackingmessage=Now tracking:
