Fixed localisation names
Changed duplicate assemble entry

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -96,8 +96,8 @@ container.TileController.name=Launcher Controller
 gui.icbm:workstation.assemble.name=Assemble
 gui.icbm:workstation.assemble.width=50
 
-gui.icbm:workstation.assemble.name=Disassemble
-gui.icbm:workstation.assemble.width=70
+gui.icbm:workstation.disassemble.name=Disassemble
+gui.icbm:workstation.disassemble.width=70
 
 gui.icbm:workstation.mode.name=Mode
 gui.icbm:workstation.mode.width=30
