--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -28,10 +28,13 @@ item.icbm:gpsFlag.name=GPS Data Chip
 tile.icbm:TileMissile.0.name=Wooden Rocket Display
 tile.icbm:TileMissile.1.name=Wooden Small Missile Display
 
+tile.icbm:smallSilo.container.name=Small Silo Screen
+tile.icbm:smallSiloController.container.name=Launcher Guidance Screen
+
 tile.icbm:smallLauncher.name=Portable Missile Launcher
-tile.icbm:smallLauncher.container.name=Launcher Guidance Screen
-tile.icbm:smallLauncher.container.invalidtarget=Invalid Target Location
-tile.icbm:smallLauncher.container.invaliddistance=Target distance needs to be between 20 and 200
+tile.icbm:portableLauncher.container.name=Portable Missile Launcher
+tile.icbm:portableLauncher.container.invalidtarget=Invalid Target Location
+tile.icbm:portableLauncher.container.invaliddistance=Target distance needs to be between 20 and 200
 
 tile.icbm:missileController.name=Launcher Controller
 tile.icbm:smallsilo.name=Small Silo
