Changed warhead textures, Added crafting parts for missiles, Added small missile skin as a crafting part

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -24,6 +24,10 @@ item.icbm:siloLinker.name=Data Chip
 
 item.icbm:gpsFlag.name=GPS Data Chip
 
+## Parts
+item.icbm:missileParts.name=Missile Crafting Part
+item.icbm:missileParts.smallMissileCasing.name=Small Missile Skin
+
 ## Tiles
 tile.icbm:TileMissile.0.name=Wooden Rocket Display
 tile.icbm:TileMissile.1.name=Wooden Small Missile Display
