Fixed a few errors, Changed phase distance from 1000 to 500, Fixed localization for controller GUI

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -70,7 +70,8 @@ info.icbm:trigger.name=Trigger
 
 
 ## Controller GUI error messages
-gui.icbm:controller.links.none.name=No silos linked
+gui.icbm:controller.links.none=No silos linked
+gui.icbm:controller.links.none.hint=Try using the Data Chip
 gui.icbm:controller.invalid.input.name=Invalid input
 
 ## Controller GUI buttons
