--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -45,14 +45,15 @@ tile.icbm:smallsilo.name=Small Silo
 tile.icbm:missileworkstation.name=Missile Station
 
 tile.icbm:decorLaunchPad.name=Launch Pad
-tile.icbm:decorLaunchPad.0.name=Launch Pad
-tile.icbm:decorLaunchPad.1.name=Launch Pad
-tile.icbm:decorLaunchPad.2.name=Launch Pad
-tile.icbm:decorLaunchPad.3.name=Launch Pad
-tile.icbm:decorLaunchPad.4.name=Launch Pad
-tile.icbm:decorLaunchPad.5.name=Launch Pad
-tile.icbm:decorLaunchPad.6.name=Launch Pad
-tile.icbm:decorLaunchPad.7.name=Launch Pad
+tile.icbm:decorLaunchPad.0.name=North Edge
+tile.icbm:decorLaunchPad.1.name=South Edge
+tile.icbm:decorLaunchPad.2.name=West Edge
+tile.icbm:decorLaunchPad.3.name=East Edge
+tile.icbm:decorLaunchPad.4.name=SW Edge
+tile.icbm:decorLaunchPad.5.name=SE Edge
+tile.icbm:decorLaunchPad.6.name=NW Edge
+tile.icbm:decorLaunchPad.7.name=NE Edge
+tile.icbm:decorLaunchPad.8.name=Center
 
 tile.icbm:launcherPart.name=Launcher Part
 tile.icbm:launcherPart.0.name=Launcher Computer
