Added anti plant life missile

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -70,6 +70,7 @@ explosive.icbm:FireBomb.name=Fire Bomb
 explosive.icbm:FlashFire.name=Flash Fire
 explosive.icbm:TorchEater.name=Torch Eater
 explosive.icbm:EnderBlocks.name=Ender Blocks
+explosive.icbm:AntiPlant.name=Anti-Plant Life
 
 ## Launcher
 item.icbm:rocketLauncher.name=Handheld Launcher
