--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -20,9 +20,13 @@ item.icbm:missile.medium.empty.name=Large Missile Casing
 item.icbm:missile.large.name=ICBM
 item.icbm:missile.large.empty.name=ICBM Casing
 
-item.icbm:siloLinker.name=Data Chip
 
+## Items
+item.icbm:siloLinker.name=Data Chip
 item.icbm:gpsFlag.name=GPS Data Chip
+
+item.icbm:rocketLauncher.name=Rocket Launcher
+info.icbm:rocketLauncher.tooltip=Fires micro missiles
 
 ## Parts
 item.icbm:missileParts.name=Missile Crafting Part
@@ -72,9 +76,6 @@ explosive.icbm:TorchEater.name=Torch Eater
 explosive.icbm:EnderBlocks.name=Ender Blocks
 explosive.icbm:AntiPlant.name=Anti-Plant Life
 
-## Launcher
-item.icbm:rocketLauncher.name=Handheld Launcher
-info.icbm:rocketlauncher.tooltip=Fires small missiles
 
 ## Warhead
 tile.icbm:warhead.name=Warhead
