Reworked creative tab, Reworked explosive crafting, Added explosive parts,

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -32,6 +32,16 @@ info.icbm:rocketLauncher.tooltip=Fires micro missiles
 item.icbm:missileParts.name=Missile Crafting Part
 item.icbm:missileParts.smallMissileCasing.name=Small Missile Skin
 
+item.icbm:explosivePart.name=Explosive Part
+item.icbm:explosivePart.arrowTube.name=Arrow Tube
+item.icbm:explosivePart.arrowBundle.name=Arrow Bundle
+item.icbm:explosivePart.gunpowderCharge.name=Gunpowder Charge
+item.icbm:explosivePart.magicCharge.name=Magic Charge
+item.icbm:explosivePart.powderStick.name=Powder Stick
+
+## Explosive Items
+item.icbm:explosiveItem.name=Explosive Unit
+
 ## Tiles
 tile.icbm:TileMissile.0.name=Wooden Rocket Display
 tile.icbm:TileMissile.1.name=Wooden Small Missile Display
