Added sudo textures for explosive items, Fixed items overriding each other when registered, Added unit testing for recipes, warhead creation, and other related areas

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -105,6 +105,7 @@ explosive.icbm:ThaumJar.name=Node Trapper
 tile.icbm:warhead.name=Warhead
 tile.icbm:warhead.micro.name=Micro Warhead
 tile.icbm:warhead.small.name=Small Warhead
+tile.icbm:warhead.standard.name=Warhead
 
 ## Info
 info.icbm:engine.name=Engine
