Changed over ArrowFragment to Fragment, Added ExplosiveHandler for each explosive, Implemented corner icon to tell what explosive type each warhead contains

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -100,7 +100,15 @@ explosive.icbm:ThaumTaint.name=Taint Goo
 explosive.icbm:ThaumTaintBottle.name=Bottled Taint
 explosive.icbm:ThaumNode.name=Node Dispenser
 explosive.icbm:ThaumJar.name=Node Trapper
+explosive.icbm:MicroQuake.name=Micro Quake
+explosive.icbm:Regen.name=Regen
 
+## Dev only Explosives, Optional to translate
+explosive.icbm:SimplePathTest1.name=Path Test
+explosive.icbm:SimplePathTest2.name=Path Test
+explosive.icbm:SimplePathTest3.name=Path Test
+explosive.icbm:SimplePathTest10.name=Path Test
+explosive.icbm:SimplePathTest20.name=Path Test
 
 
 ## Warhead
