Adjusted missile & warhead item info, Fixed fragmentation localization

--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -41,7 +41,7 @@ item.icbm:explosivePart.powderStick.name=Powder Stick
 
 ## Explosive Items
 item.icbm:explosiveItem.name=Explosive Unit
-item.icbm:explosiveItem.ArrowFragment.name=Explosive Arrow Bundle
+item.icbm:explosiveItem.Fragment.name=Fragmentation Charge
 item.icbm:explosiveItem.ExoThermic.name=Exothermic Charge
 item.icbm:explosiveItem.EndoThermic.name=Endothermic Charge
 item.icbm:explosiveItem.FireBomb.name=Fire Starter Charge
@@ -89,7 +89,7 @@ explosive.icbm:tnt.name=TNT
 explosive.icbm:snowmen.name=Let it Snow!
 explosive.icbm:EndoThermic.name=Endothermic
 explosive.icbm:ExoThermic.name=Exothermic
-explosive.icbm:ArrowFragment.name=Arrow
+explosive.icbm:Fragment.name=Fragment
 explosive.icbm:Antimatter.name=Antimatter
 explosive.icbm:FireBomb.name=Fire Bomb
 explosive.icbm:FlashFire.name=Flash Fire
