--- a/src/main/resources/assets/icbm/lang/en_US.lang
+++ b/src/main/resources/assets/icbm/lang/en_US.lang
@@ -191,6 +191,13 @@ module.icbm:guidance.chip.1.name=Novice Guidance Chip
 module.icbm:guidance.chip.2.name=Guidance Chip
 module.icbm:guidance.chip.3.name=Improved Guidance Chip
 
+## FoF station GUI
+gui.fof.message.default=Use the dialog to set the id
+gui.fof.message.confirm=Action Completed
+gui.fof.message.wip=error:Not implemented yet
+gui.fof.message.missing.perm=error:Access Denied
+gui.fof.message.removed.ids=Removed %s entries
+
 ## Thaumcraft Support
 tc.research_category.ICBM=Thaumium Desolation
 thaumcraft.research.TaintWarhead.name=Taint Warhead
